# tophvim

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  devbox.json  flake.nix  justfile  pyproject.toml  ruff.toml  sample.ipynb  zellij-nvim.md
nix/: mkNeovim.nix  neovim-overlay.nix
nix/patches/: molten-nvim-fix-thread-safety.patch
nvim/: init.lua
nvim/ftdetect/: dockerfile.lua
nvim/ftplugin/: dockerfile.lua  python.lua
nvim/lua/jupytext/: utils.lua
nvim/lua/user/: lsp.lua
nvim/plugin/: alpha.lua  amp.lua  auto-session.lua  autocommands.lua  commands.lua  comment.lua  completion.lua  copilot.lua  flash.lua  fm-nvim.lua  image.lua  jupytext.lua  keymaps.lua  lazygit.lua  lualine.lua  markdown-plus.lua  molten.lua  multicursors.lua  nvim-surround.lua  nvim-tree.lua  opencode.lua  pasta.lua  plugins.lua  quarto.lua  render-markdown.lua  rnvimr.lua  smart-splits.lua  telescope.lua  tide.lua  toggleterm.lua  treesitter.lua  which-key.lua
