[project]
name = "tophvim"
version = "0.1.0"
description = "Filler test project"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupytext>=1.19.1",
    "kaleido>=1.1.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
]

[tool.bumpversion]
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        \\.                                             # period separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)                           # pre-release label
        (?P<pre_n>0|[1-9]\\d*)                          # pre-release version number, for adding a branch name, add this to the next line: (?:\\+\\w+)
    )?                                                  # pre-release section is optional
"""
serialize = [
    "{major}.{minor}.{patch}.{pre_l}{pre_n}", #+{short_branch_name}",
    "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = true
tag_name = "v{new_version}"
moveable_tags = [
    "latest",
]
allow_dirty = false
commit = true
sign_tags = false
tag_message = "Bump version: {current_version} → {new_version}"
message = "Bump version: {current_version} → {new_version}"
commit_args = "--no-verify"
pre_commit_hooks = ["uv sync", "git add uv.lock"]

[tool.bumpversion.parts.pre_l]
values = ["dev", "post"]
optional_value = "post"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
